--- a/literature.bib
+++ b/literature.bib
@@ -244,3 +244,9 @@
   year={1996},
   publisher={CSLI Publications and Cambridge university press}
 }
+@article{goodman2016european,
+  title={European Union regulations on algorithmic decision-making and a" right to explanation"},
+  author={Goodman, Bryce and Flaxman, Seth},
+  journal={arXiv preprint arXiv:1606.08813},
+  year={2016}
+}
