--- a/lmumihs.tex
+++ b/lmumihs.tex
@@ -20,9 +20,7 @@
 \usepackage{dcolumn}
 \usepackage[backend=bibtex, style=numeric, isbn=true, doi=true, maxnames=99]{biblatex}
 % WaterMarker
-\usepackage{draftwatermark}
-\SetWatermarkText{second draft}
-\SetWatermarkScale{1}
+
 
 \addbibresource{literature.bib}
 
@@ -35,10 +33,10 @@
 
 %% Paper title.
 
-\title{A Literatural Overview on Explanations in Personalization and Possible Criterion for Designing a Short Explanation}
+\title{A Literature Overview on Explanations in Recommender System and Possible Criteria for Designing Brief Explanation}
 
 %% Put your name here
-\author{Yifei Zhan}
+\author{Yifei Zhan, Sarah Theres Völkel}
 \authorfooter{
 %% change name, course (Media Informatics/Informatics/etc) and email for the footer
 \item
@@ -50,14 +48,11 @@
 
 %% Abstract section.
 \abstract{
-This paper provides a literatural overview of explanations in personalization and recommender systems.
-It then introduced two standards/criterion on how to design and evaluate explanations in recommender systems.
-Which type of explanations the system should offer to users depends on the goal of the system.
-And in some scenarios, like in a driving context, pages of explanations might not be suitable. In this case,
-short explanations is preferred. In order to explore possible criterion of short explanations, two studies were
-introduced and what we have found is that \textbf{efficiency}, \textbf{persuasiveness} and \textbf{why} question-type-based
-explanations might be suitable for short explanations. However, some more studies need to be done in order to
-check the validity of other criterion in short explanations.
+This paper provides a literature overview of explanations in recommender systems.
+It introduced two standards/criteria on how to design and evaluate explanations in recommender systems.
+In general, the type of explanations depends on the goal of the system.
+For example, in some scenarios, like in a driving context, pages of explanations might not be suitable. In this case,
+drivers may prefer brief explanations. In order to find possible criteria for it, we extracted some principles from two recent studies and what we have found is that \textbf{efficiency}, \textbf{persuasiveness} and \textbf{why} question-type-based explanations might be suitable for brief explanations. However, more studies need to be done in order to explore other possible criteria for it.
 } % end of abstract
 
 %% Keywords that describe your work.
